[package]
name = "sol-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
solana-client = "1.18.11"
solana-sdk = "1.18.11"
tokio = { version = "1.37.0", features = ["full"] }
